<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:id="@+id/everyone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_everyone"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold|normal"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancle"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold|normal"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_for_me"
        android:textAlignment="textEnd"
        android:padding="10dp"
        android:textSize="16sp"
        android:textStyle="bold|normal"
        android:textColor="@color/black" />




</LinearLayout>