<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Verification">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:cardCornerRadius="400dp"
                android:layout_gravity="center"
                android:layout_margin="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/verifcation"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textColor="@color/skyblue"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/we_will_send_you_an_"
                    android:textAlignment="center"
                    android:layout_marginRight="6dp"
                    android:textStyle="normal"
                    android:textColor="#656262"
                    android:textSize="16sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/one_time_password"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    />

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/on_this_mobile"
                android:layout_gravity="center"
                android:textStyle="normal"
                android:textColor="#656262"
                android:textSize="16sp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="10dp"
                app:cardCornerRadius="8dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <EditText
                        android:id="@+id/editNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold|normal"
                        android:background="@drawable/custom_background"
                        android:ems="1"
                        android:padding="15dp"
                        android:layout_marginBottom="15dp"
                        android:inputType="phone"
                        android:textColor="#1C1C1C"
                        android:hint="@string/type_your_phone_number"/>
                    <Button
                        android:id="@+id/continuebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Continue"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:padding="15dp"
                        android:textStyle="bold|normal"
                        android:background="@drawable/custom_button"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>


</LinearLayout>