<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".SetupProfileActivity"
    tools:ignore="MissingClass">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:src="@drawable/profileimage" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_informaton"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold|normal"
        android:textColor="@color/black" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_setup_your_name_and_an_optional_profile_image"
        android:textAlignment="center"
        android:textSize="13sp"
        android:textStyle="bold|normal"
        android:textColor="@color/grey1" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/white"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/nameBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold|normal"
                android:background="@drawable/custom_background"
                android:ems="1"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:textColor="#1C1C1C"
                android:hint="@string/type_your_name"
                android:autofillHints="" />
            <Button
                android:id="@+id/continuebtm02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setup_profile"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:padding="15dp"
                android:textStyle="bold|normal"
                android:background="@drawable/custom_button"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>





        </LinearLayout>
    </ScrollView>

</LinearLayout>
