<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtpActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:cardCornerRadius="400dp"
                android:layout_gravity="center"
                android:layout_margin="25dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"

                    android:src="@drawable/otp_img"
                    tools:ignore="ContentDescription" />
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/phone"
                android:text="@string/verify_923039543543"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold|normal"
                android:layout_margin="10dp"
                android:textColor="@color/skyblue"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/enter_otp_code_to_verify_your_phone_number"
                android:textAlignment="center"
                android:textSize="13sp"
                android:textStyle="normal"
                android:layout_margin="20dp"
                android:textColor="#424040"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                android:layout_gravity="center"

                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >
                    <com.mukeshsolanki.OtpView
                        android:id="@+id/otp_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textSize="20sp"
                        android:hint="@string/underscore"
                        android:layout_gravity="center"
                        android:layout_margin="30dp"
                        android:itemBackground="#B6B6B6"
                        android:focusableInTouchMode="true"
                        app:OtpItemCount="6"
                        app:OtpLineColor="#0169EC"
                        app:OtpViewType="line"


                        />



                    <Button
                        android:id="@+id/continuebtn01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Continue"
                        android:textColor="@color/white"
                        android:textSize="17sp"
                        android:padding="15dp"
                        android:layout_margin="20dp"
                        android:textStyle="bold|normal"
                        android:background="@drawable/custom_button"/>



                </LinearLayout>




            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</LinearLayout>