<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <LinearLayout
            android:layout_width="197dp"
            android:layout_height="45dp"
            android:layout_gravity="start"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ImageView2"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:importantForAccessibility="no"
                android:src="@drawable/baseline" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile01"
                android:layout_width="43dp"
                android:layout_height="43dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:src="@drawable/profileimage" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold|normal" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold|normal"
                    android:visibility="invisible" />


            </LinearLayout>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:id="@+id/linear01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/toolbar">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_marginLeft="10dp"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear02"
        android:orientation="horizontal"
        android:layout_above="@+id/linear01"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:background="@drawable/bottom_shape"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <androidx.cardview.widget.CardView
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_weight="2"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"

                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/custom_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <EditText
                        android:id="@+id/messageBox"
                        android:gravity="start"
                        android:hint="@string/type_a_message"
                        android:textSize="20sp"
                        android:layout_gravity="start"

                        android:textStyle="bold"
                        android:layout_marginStart="5dp"
                        android:background="@android:color/transparent"
                        android:paddingStart="5dp"
                        android:paddingEnd="1dp"
                        android:padding="5dp"
                        android:textColorHint="#424242"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="" />



                </LinearLayout>
                <ImageView
                    android:id="@+id/attachment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:padding="9dp"
                    android:src="@drawable/attach"
                    app:tint="#5C5C5C"/>
                <ImageView
                    android:id="@+id/camera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:padding="9dp"
                    android:src="@drawable/camera"
                    app:tint="#5C5C5C"/>



            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <ImageView
            android:id="@+id/sendbtn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginEnd="9dp"
            android:padding="8dp"
            android:background="@drawable/bg_color"
            android:src="@drawable/send"
            app:tint="@color/white" />


    </LinearLayout>


</RelativeLayout>